changed hover color to be the same as selection color

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -35,7 +35,7 @@
                 text-decoration: none;
             }
             &:hover {
-                border-top: 8px @hover-color solid;
+                border-top: 8px @selection-color solid;
                 padding-top: 12px;
             }
             &.selected {
