updated gitignore to include .DS_Store

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -50,6 +50,7 @@
 
 .flexslider-container {
     height: 400px;
+    width: 100%;
 }
 
 .flexslider{
@@ -58,6 +59,7 @@
     box-shadow: none;
     margin: 0px;
     margin-top: 20px;
+    width: 100%;
 }
 
 .flex-image {
