--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
 .menu-bar {
   display: block;
   font-family: 'Open Sans', sans-serif;
@@ -19,7 +23,7 @@
   width: 100%;
   height: 30px;
   line-height: 30px;
-  font-size: 16px;
+  font-size: 17px;
   text-decoration: none;
 }
 .menu-bar ul li:hover {
@@ -30,30 +34,94 @@
   padding-top: 12px;
   border-top: 8px #ed1c24 solid;
 }
-.flexslider-container {
+.welcome-container {
+  position: relative;
   height: 400px;
+  margin-top: 20px;
 }
-.flexslider {
+.welcome-container .flexslider {
+  width: 100%;
+  position: absolute;
+  height: 400px;
   background: none;
   border: none;
   box-shadow: none;
   margin: 0px;
+  z-index: -100;
+}
+.welcome-container .caption-container {
+  z-index: 100;
+  position: absolute;
+  height: 100px;
+  margin-top: 300px;
+  width: 100%;
+  background: white;
+  opacity: 0.90;
+}
+.welcome-container .caption-container .caption {
+  margin: 0 auto;
+  width: 90%;
+}
+.welcome-container .caption-container .caption .caption-header {
+  padding-top: 10px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 28px;
+}
+.welcome-container .caption-container .caption .caption-text-content {
+  padding-top: 10px;
+  height: 55px;
+  font-size: 15px;
+  line-height: 25px;
+  padding-bottom: 5px;
+}
+.header {
   margin-top: 20px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 22px;
+  font-weight: 300;
+}
+.text-content {
+  text-align: justify;
+  margin-top: 10px;
+  font-size: 14px;
+  line-height: 21px;
+}
+.event-container {
+  display: block;
+  height: 300px;
+}
+.event-container .event-photo {
+  height: 300px;
+  background: url("../images/picture1.jpg") center center no-repeat;
+  background-size: cover;
 }
 .flex-image {
   width: 100%;
   height: 400px;
 }
 .flex-image.image1 {
-  background: url("../images/picture1.jpg") no-repeat;
+  background: url("../images/picture2.jpg") center center no-repeat;
   background-size: cover;
 }
 .flex-image.image2 {
-  background: url("../images/picture2.jpg") center center no-repeat;
+  background: url("../images/picture3.jpg") center center no-repeat;
   background-size: cover;
+}
+.footer {
+  display: block;
+  background-color: #1896d5;
+  width: 100%;
+  color: white;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 @media screen and (max-width: 768px) {
   .flex-image {
     height: 200px;
   }
+}
+@media screen and (max-width: 468px) {
+  
 }
