--- a/public/css/index.less
+++ b/public/css/index.less
@@ -15,9 +15,12 @@
 
 }
 
+body {
+    .font(@main-font, 300);
+}
+
 .menu-bar {
     display: block;
-
     .font(@main-font, 300);
     ul {
         list-style: none;
@@ -31,7 +34,7 @@
                 vertical-align: center;
 				color: black;
             	width: 100%;
-                .height(30px, 16px);
+                .height(30px, 17px);
                 text-decoration: none;
             }
             &:hover {
@@ -44,41 +47,105 @@
             }
         }
 
+    }
+}
+
+/* SUPER UGLY NEED TO REFACTOR */
+.welcome-container {
+    position: relative;
+    height: 400px;
+    margin-top: 20px;
+    .flexslider{
+        width: 100%;
+        position: absolute;
+        height: 400px;
+        background: none;
+        border: none;
+        box-shadow: none;
+        margin: 0px;
+        z-index: -100;
+    }
+    .caption-container {
+        z-index: 100;
+        position: absolute;
+        height: 100px;
+        margin-top: 300px;
+        width: 100%;
+        background: white;
+        opacity: 0.90;
+        .caption {
+            margin: 0 auto;
+            width: 90%;
+            .caption-header {
+                padding-top: 10px;
+                .height(30px, 28px);
+            }
+            .caption-text-content {
+                padding-top: 10px;
+                height: 55px;
+                font-size: 15px;
+                line-height: 25px;
+                padding-bottom: 5px;
+            }
+        }
 
     }
 }
 
-.flexslider-container {
-    height: 400px;
-    width: 100%;
+/* EVERYTHING IS SUPER HARD CODED, MAKE VARIABLES */
+.header {
+    margin-top: 20px;
+    .height(30px, 22px);
+    font-weight: 300;
 }
 
-.flexslider{
-    background: none;
-    border: none;
-    box-shadow: none;
-    margin: 0px;
-    margin-top: 20px;
-    width: 100%;
+.text-content {
+    text-align: justify;
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.event-container {
+    display: block;
+    height: 300px;
+    // background-color: red;
+    .event-photo {
+        height: 300px;
+        background: url("../images/picture1.jpg") center center no-repeat;
+        background-size: cover;
+    }
 }
 
 .flex-image {
     width: 100%;
     height: 400px;
     &.image1 {
-        background: url("../images/picture1.jpg") no-repeat;
+        background: url("../images/picture2.jpg") center center no-repeat;
         background-size: cover;
     }
     &.image2 {
-        background: url("../images/picture2.jpg")center center no-repeat;
+        background: url("../images/picture3.jpg")center center no-repeat;
         background-size: cover;
     }
 }
 
+.footer {
+    display: block;
+    background-color: #1896d5;
+    width: 100%;
+    color: white;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
 
 @media screen and (max-width: 768px) {
     .flex-image {
         height: 200px;
     }
+}
+
+@media screen and (max-width: 468px) {
+
 }
 
