--- a/public/css/index.less
+++ b/public/css/index.less
@@ -106,8 +106,19 @@ body {
     line-height: 21px;
 }
 
+.welcome-container2 {
+    height: 170px;
+    display: block;
+}
+
+.welcome-container1 {
+    height: 200px;
+    display: block;
+}
+
 .event-container {
     display: block;
+    margin-bottom: 15px;
     height: 300px;
     // background-color: red;
     .event-photo {
