--- a/public/css/index.less
+++ b/public/css/index.less
@@ -108,10 +108,12 @@ body {
 
 .welcome-container2 {
     display: block;
+    margin-bottom: 30px;
 }
 
 .welcome-container1 {
     display: block;
+    margin-bottom: 30px;
 }
 
 .event-container {
