--- a/public/css/events.css
+++ b/public/css/events.css
@@ -34,13 +34,57 @@ body {
   padding-top: 12px;
   border-top: 8px #ed1c24 solid;
 }
-.event-row .event-box {
-  height: 250px;
-  background-color: red;
+.event-row .event {
+  height: 200px;
 }
-.event-row .event-box.one {
-  background-color: blue;
+.event-row .event.one {
+  position: relative;
+  background-image: url(http://cdn0.sbnation.com/imported_assets/419167/oski_092609_0438.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
-.event-row .event-box.three {
+.event-row .event.one:hover {
+  cursor: pointer;
+}
+.event-row .event.two {
+  position: relative;
+  background-image: url(http://all-that-is-interesting.com/wordpress/wp-content/uploads/2012/06/fireworks-golden-gate-bridge.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.event-row .event.two:hover {
+  cursor: pointer;
+}
+.event-row .event.three {
   background-color: green;
+}
+.event-text-container {
+  position: absolute;
+  background-color: #eeeeee;
+  opacity: 0.9;
+  width: 100%;
+  height: 200px;
+}
+.event-title {
+  position: absolute;
+  background-color: #454545;
+  color: white;
+  opacity: 0.85;
+  width: 100%;
+  height: 25px;
+  margin-top: 175px;
+  text-align: center;
+  line-height: 25px;
+  font-size: 14px;
+  font-weight: 300;
+}
+.event-row-title {
+  font-size: 80px;
+  line-height: 80px;
+  font-weight: 300;
+  margin-top: 40px;
+  margin-bottom: 5px;
+  margin-left: 15px;
 }
