added jQuery animation for events and filled with dummy content, added toggling arrow, and event header picture, with dummy event pictures

--- a/public/css/events.css
+++ b/public/css/events.css
@@ -34,12 +34,60 @@ body {
   padding-top: 12px;
   border-top: 8px #ed1c24 solid;
 }
+.header-event {
+  height: 350px;
+  background-image: url("../images/picture2.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-top: 20px;
+}
+.header-event .header-event-text-container {
+  width: 20%;
+  height: 100%;
+  background: grey;
+  opacity: 0.5;
+}
+.events-menu-container {
+  display: block;
+  width: 100%;
+  height: 45px;
+}
+.events-menu-container .events-menu {
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+.events-menu-container .events-menu li {
+  display: inline-block;
+  margin: 5px 20px;
+  text-align: center;
+  padding: 5px 20px;
+  width: 100px;
+}
+.events-menu-container .events-menu li .active {
+  color: blue;
+}
+.events-menu-container .events-menu li a {
+  display: block;
+  vertical-align: center;
+  height: 25px;
+  line-height: 25px;
+  font-size: 15px;
+  color: black;
+  width: 100%;
+  text-decoration: none;
+}
+.events-menu-container .events-menu li:hover a {
+  background: #eee;
+}
 .event-row .event {
   height: 200px;
 }
 .event-row .event.one {
   position: relative;
-  background-image: url(http://cdn0.sbnation.com/imported_assets/419167/oski_092609_0438.jpg);
+  background-image: url("../images/event1.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -49,9 +97,9 @@ body {
 }
 .event-row .event.two {
   position: relative;
-  background-image: url(http://all-that-is-interesting.com/wordpress/wp-content/uploads/2012/06/fireworks-golden-gate-bridge.jpg);
+  background-image: url("../images/event3.jpg");
   background-size: cover;
-  background-position: center center;
+  background-position: center 25%;
   background-repeat: no-repeat;
 }
 .event-row .event.two:hover {
@@ -62,29 +110,56 @@ body {
 }
 .event-text-container {
   position: absolute;
-  background-color: #eeeeee;
-  opacity: 0.9;
   width: 100%;
-  height: 200px;
-}
-.event-title {
-  position: absolute;
-  background-color: #454545;
-  color: white;
+  background-color: white;
   opacity: 0.85;
-  width: 100%;
+  margin-top: 25px;
+  height: 175px;
+}
+.event-text-container .event-title {
+  position: relative;
+  background-color: #454545;
+  opacity: 0.85;
   height: 25px;
-  margin-top: 175px;
+  color: white;
+  width: 100%;
   text-align: center;
   line-height: 25px;
   font-size: 14px;
   font-weight: 300;
 }
-.event-row-title {
-  font-size: 80px;
-  line-height: 80px;
-  font-weight: 300;
-  margin-top: 40px;
-  margin-bottom: 5px;
+.event-text-container .event-title .title-arrow {
+  float: right;
+  text-align: left;
+  height: 25px;
+  line-height: 25px;
+  font-size: 18px;
+  margin-right: 25px;
+}
+.event-subtitle {
+  position: relative;
+  height: 150px;
+}
+.event-subtitle .event-subtitle-content {
+  height: 100px;
+  margin: 25px 40px;
+  margin-right: 0;
+}
+.event-subtitle .blocks {
+  display: inline-block;
+  vertical-align: top;
+  height: 37.5px;
+  line-height: 37.5px;
+  font-size: 25px;
+}
+.event-subtitle .subtitle-text {
   margin-left: 15px;
+  font-size: 14px;
+}
+.event-subtitle .links {
+  font-size: 14px;
+  margin-right: 20px;
+}
+.event-subtitle .links a {
+  text-decoration: none;
 }
