--- a/public/css/officers.css
+++ b/public/css/officers.css
@@ -11,20 +11,26 @@ body {
   list-style: none;
 }
 .menu-bar ul li {
-  padding-top: 12px;
-  padding-bottom: 20px;
+  width: auto;
+  height: auto;
   display: inline-block;
   text-align: center;
+  padding: 0px 15px;
 }
 .menu-bar ul li a {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
   display: block;
   vertical-align: center;
   color: black;
   width: 100%;
-  height: 55px;
-  line-height: 55px;
-  font-size: 17px;
+  padding-top: 12px;
+  padding-bottom: 20px;
+  height: 25px;
+  line-height: 25px;
+  font-size: 15px;
   text-decoration: none;
+  text-align: center;
 }
 .menu-bar ul li:hover {
   border-top: 4px #00237d solid;
@@ -32,16 +38,27 @@ body {
 .menu-bar ul li.selected {
   border-top: 4px #ed1c24 solid;
 }
-@media (max-width: 767px) {
+@media (min-width: 768px) and (max-width: 1199px) {
   .menu-bar ul li {
-    padding-bottom: 0px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 0px 10px;
   }
   .menu-bar ul li a {
     height: 25px;
     line-height: 25px;
-    font-size: 14px;
+    font-size: 13px;
+    padding-bottom: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .menu-bar ul li {
+    padding: 0px 5px;
+    text-align: center;
+  }
+  .menu-bar ul li a {
+    height: 25px;
+    line-height: 25px;
+    font-size: 11px;
+    padding-bottom: 15px;
   }
 }
 body {
@@ -57,20 +74,26 @@ body {
   list-style: none;
 }
 .menu-bar ul li {
-  padding-top: 12px;
-  padding-bottom: 20px;
+  width: auto;
+  height: auto;
   display: inline-block;
   text-align: center;
+  padding: 0px 15px;
 }
 .menu-bar ul li a {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
   display: block;
   vertical-align: center;
   color: black;
   width: 100%;
-  height: 55px;
-  line-height: 55px;
-  font-size: 17px;
+  padding-top: 12px;
+  padding-bottom: 20px;
+  height: 25px;
+  line-height: 25px;
+  font-size: 15px;
   text-decoration: none;
+  text-align: center;
 }
 .menu-bar ul li:hover {
   border-top: 4px #00237d solid;
@@ -78,16 +101,27 @@ body {
 .menu-bar ul li.selected {
   border-top: 4px #ed1c24 solid;
 }
-@media (max-width: 767px) {
+@media (min-width: 768px) and (max-width: 1199px) {
   .menu-bar ul li {
-    padding-bottom: 0px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 0px 10px;
   }
   .menu-bar ul li a {
     height: 25px;
     line-height: 25px;
-    font-size: 14px;
+    font-size: 13px;
+    padding-bottom: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .menu-bar ul li {
+    padding: 0px 5px;
+    text-align: center;
+  }
+  .menu-bar ul li a {
+    height: 25px;
+    line-height: 25px;
+    font-size: 11px;
+    padding-bottom: 15px;
   }
 }
 .footer-container {
@@ -127,6 +161,19 @@ body {
   line-height: 20px;
   font-size: 13px;
 }
+.contact-container a:hover,
+.sitemap-container a:hover {
+  color: #4d4d4d;
+}
+.sitemap-container ul li {
+  display: inline-block;
+  vertical-align: top;
+}
+.sitemap-container ul li:before {
+  content: "/";
+  padding: 0 2px;
+  color: #000000;
+}
 .tabling-container {
   color: #000000;
 }
@@ -143,9 +190,6 @@ body {
 .social-container ul li {
   padding-right: 20px;
   display: inline-block;
-}
-.social-container ul .twitter {
-  background: url(../images/no-border/twitter.png) no-repeat;
 }
 .social-container ul .facebook {
   background: url(../images/no-border/facebook.png) no-repeat;
@@ -189,7 +233,7 @@ body {
   transform: rotate(360deg);
 }
 .footer-bottom-container {
-  margin: 10px auto 50px auto;
+  margin: 30px auto 20px auto;
   height: 15px;
   line-height: 15px;
   font-size: 12px;
@@ -243,6 +287,9 @@ body {
   .footer-column {
     text-align: center;
   }
+  .footer-column ul {
+    margin: 0px 5px;
+  }
   .footer-column ul li a {
     font-size: 13px;
     text-align: center;
@@ -255,15 +302,6 @@ body {
   .footer-bottom-container {
     margin-top: 30px;
   }
-  .sitemap-container ul li {
-    display: inline-block;
-    vertical-align: top;
-  }
-  .sitemap-container ul li:before {
-    content: "/";
-    padding: 0 2px;
-    color: #000000;
-  }
 }
 .background-header {
   font-family: 'Open Sans', sans-serif;
@@ -271,7 +309,7 @@ body {
   position: absolute;
   color: #f4f4f4;
   top: 50px;
-  left: 10%;
+  left: 15%;
   height: 150px;
   line-height: 150px;
   font-size: 150px;
