--- a/css/about.less
+++ b/css/about.less
@@ -26,4 +26,8 @@
     .height(40px, 22px);
 }
 
-
+@media (max-width: 767px) {
+    .background-header, .year-menu-container, .top-link {
+        display: none;
+    }
+}
