--- a/css/index.less
+++ b/css/index.less
@@ -49,14 +49,9 @@ body {
 
 .flex-image {
     height: 400px;
-    &.image1 {
-        background: url("../images/picture2.jpg") center center no-repeat;
-        background-size: cover;
-    }
-    &.image2 {
-        background: url("../images/picture3.jpg") center center no-repeat;
-        background-size: cover;
-    }
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 @media (min-width: 768px) and (max-width: 1199px) {
