--- a/css/text.less
+++ b/css/text.less
@@ -1,3 +1,6 @@
+@import "base.less";
+@import "footer.less";
+
 .background-header {
     .font(@main-font, 300);
     position: absolute;
@@ -13,4 +16,10 @@
     height: @header-height;
     display: block;
     margin-bottom: 20px;
+    .height(50px, 35px);
+}
+
+.mentorship-text {
+    .line-height(22px, 14px);
+    text-align: justify;
 }
