--- a/css/footer.less
+++ b/css/footer.less
@@ -7,6 +7,8 @@
 @footer-text-color: black;
 @footer-link-color: black;
 .footer-container {
+    position: fixed;
+    bottom: 0;
     ul {
         margin: 0;
         padding: 0;
@@ -16,6 +18,7 @@
     width: 100%;
     background-color: @footer-background;
     color: white;
+    height: 230px; //fixed height
     a { color: @footer-link-color; }
 }
 
