--- a/css/officers.css
+++ b/css/officers.css
@@ -57,7 +57,23 @@ body {
   .menu-bar ul li a {
     height: 25px;
     line-height: 25px;
-    font-size: 10px;
+    font-size: 12px;
+    padding-bottom: 15px;
+  }
+}
+@media (max-width: 420px) {
+  .menu-bar {
+    margin: 0;
+    padding: 0;
+  }
+  .menu-bar ul li {
+    padding: 0px 4px;
+    text-align: center;
+  }
+  .menu-bar ul li a {
+    height: 25px;
+    line-height: 25px;
+    font-size: 8px;
     padding-bottom: 15px;
   }
 }
@@ -120,15 +136,34 @@ body {
   .menu-bar ul li a {
     height: 25px;
     line-height: 25px;
-    font-size: 10px;
+    font-size: 12px;
+    padding-bottom: 15px;
+  }
+}
+@media (max-width: 420px) {
+  .menu-bar {
+    margin: 0;
+    padding: 0;
+  }
+  .menu-bar ul li {
+    padding: 0px 4px;
+    text-align: center;
+  }
+  .menu-bar ul li a {
+    height: 25px;
+    line-height: 25px;
+    font-size: 8px;
     padding-bottom: 15px;
   }
 }
 .footer-container {
+  position: fixed;
+  bottom: 0;
   margin-top: 50px;
   width: 100%;
   background-color: #eeeeee;
   color: white;
+  height: 230px;
 }
 .footer-container ul {
   margin: 0;
