--- a/css/text.css
+++ b/css/text.css
@@ -157,10 +157,13 @@ body {
   }
 }
 .footer-container {
+  position: fixed;
+  bottom: 0;
   margin-top: 50px;
   width: 100%;
   background-color: #eeeeee;
   color: white;
+  height: 230px;
 }
 .footer-container ul {
   margin: 0;
@@ -336,20 +339,19 @@ body {
   }
 }
 .background-header {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
   position: absolute;
-  color: #f4f4f4;
-  top: 40px;
-  left: 25%;
+  color: #f8f8f8;
   height: 150px;
   line-height: 150px;
   font-size: 150px;
   z-index: -1;
+  left: 100px;
+  top: 50px;
 }
 .header-container {
   height: 100px;
   display: block;
+  margin-top: 30px;
   margin-bottom: 20px;
   height: 50px;
   line-height: 50px;
@@ -359,4 +361,25 @@ body {
   line-height: 22px;
   font-size: 14px;
   text-align: justify;
+}
+.contact-text {
+  line-height: 22px;
+  font-size: 14px;
+  margin-top: 30px;
+}
+.contact-text i {
+  padding-right: 10px;
+  font-size: 18px;
+}
+.contact-text .bold {
+  font-weight: 400;
+}
+.contact-text a {
+  text-decoration: none;
+  color: #1896d5;
+}
+@media (max-width: 767px) {
+  .background-header {
+    display: none;
+  }
 }
