--- a/css/text.less
+++ b/css/text.less
@@ -2,19 +2,19 @@
 @import "footer.less";
 
 .background-header {
-    .font(@main-font, 300);
     position: absolute;
-    color: #f4f4f4;
-    top: 40px;
-    left: 25%;
+    color: #f8f8f8;
     .height(150px, 150px);
     z-index: -1;
+    left: 100px;
+    top: 50px;
 }
 
 @header-height: 100px;
 .header-container {
     height: @header-height;
     display: block;
+    margin-top: 30px;
     margin-bottom: 20px;
     .height(50px, 35px);
 }
@@ -23,3 +23,28 @@
     .line-height(22px, 14px);
     text-align: justify;
 }
+
+.contact-text {
+    .line-height(22px, 14px);
+    margin-top: 30px;
+    i {
+        padding-right: 10px;
+        font-size: 18px;
+    }
+    .bold {
+        font-weight: 400;
+    }
+    a {
+        text-decoration: none;
+        color: @link-blue;
+    }
+}
+
+// .footer { position: fixed; bottom: 0; width: 100%; height:110px;}
+
+@media (max-width: 767px) {
+    .background-header, {
+        display: none;
+    }
+}
+
