--- a/css/about.css
+++ b/css/about.css
@@ -345,8 +345,15 @@ body {
   line-height: 150px;
   font-size: 150px;
   z-index: -1;
-  left: 50px;
-  top: 50px;
+  left: 100px;
+  top: 430px;
+}
+.about-photo {
+  height: 400px;
+  margin-bottom: 25px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .about-header-container .about-header {
   padding-top: 10px;
@@ -366,10 +373,20 @@ body {
   line-height: 40px;
   font-size: 22px;
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  .about-photo {
+    height: 300px;
+  }
+  .background-header {
+    top: 330px;
+  }
+}
 @media (max-width: 767px) {
-  .background-header,
-  .year-menu-container,
-  .top-link {
+  .background-header {
     display: none;
+  }
+  .about-photo {
+    height: 200px;
+    margin-bottom: 10px;
   }
 }
