--- a/css/contact.less
+++ b/css/contact.less
@@ -1,5 +1,6 @@
 @import "base.less";
 @import "footer.less";
+@import "sticky-footer.less";
 
 .background-header {
     .font(@main-font, 300);
@@ -35,7 +36,7 @@
 	}
 	position: relative;
 	display: block;
-	margin: 25px auto 0 auto;
+	margin: 25px auto 100px auto;
 	width: @contact-form-container-width;
 }
 
@@ -44,6 +45,8 @@ input, textarea {
 	outline: none !important; // cancels border glow
 	box-shadow: none !important;
 	border-radius: 0px !important;
+    margin: 0;
+    padding: 0;
 }
 
 .input-header {
@@ -82,4 +85,27 @@ input, textarea {
 	input, textarea {
 		width: 250px;
 	}
+}
+
+@media (min-width: 767px) {
+    html, body {height: 100%;}
+
+    #wrap {min-height: 100%;}
+
+    #main {overflow: auto;
+        padding-bottom: 190px;}  /* must be same height as the footer */
+
+    .footer-container {position: relative;
+        margin-top: -190px; /* negative value of footer height */
+        height: 190px;
+        clear:both;}
+
+    /*Opera Fix*/
+    body:before {
+        content:"";
+        height:100%;
+        float:left;
+        width:0;
+        margin-top:-32767px;
+    }
 }
