--- a/css/text.css
+++ b/css/text.css
@@ -335,6 +335,36 @@ body {
     margin-top: 30px;
   }
 }
+@media (min-width: 767px) {
+  html,
+  body {
+    height: 100%;
+  }
+  #wrap {
+    min-height: 100%;
+  }
+  #main {
+    overflow: auto;
+    padding-bottom: 190px;
+  }
+  /* must be same height as the footer */
+  .footer-container {
+    position: relative;
+    margin-top: -190px;
+    /* negative value of footer height */
+  
+    height: 190px;
+    clear: both;
+  }
+  /*Opera Fix*/
+  body:before {
+    content: "";
+    height: 100%;
+    float: left;
+    width: 0;
+    margin-top: -32767px;
+  }
+}
 .background-header {
   position: absolute;
   color: #f8f8f8;
@@ -363,6 +393,7 @@ body {
   line-height: 22px;
   font-size: 14px;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 .contact-text i {
   padding-right: 10px;
