--- a/css/text.less
+++ b/css/text.less
@@ -1,5 +1,6 @@
 @import "base.less";
 @import "footer.less";
+@import "sticky-footer.less";
 
 .background-header {
     position: absolute;
@@ -27,6 +28,7 @@
 .contact-text {
     .line-height(22px, 14px);
     margin-top: 30px;
+    margin-bottom: 30px;
     i {
         padding-right: 10px;
         font-size: 18px;
