--- a/css/contact.css
+++ b/css/contact.css
@@ -335,6 +335,36 @@ body {
     margin-top: 30px;
   }
 }
+@media (min-width: 767px) {
+  html,
+  body {
+    height: 100%;
+  }
+  #wrap {
+    min-height: 100%;
+  }
+  #main {
+    overflow: auto;
+    padding-bottom: 190px;
+  }
+  /* must be same height as the footer */
+  .footer-container {
+    position: relative;
+    margin-top: -190px;
+    /* negative value of footer height */
+  
+    height: 190px;
+    clear: both;
+  }
+  /*Opera Fix*/
+  body:before {
+    content: "";
+    height: 100%;
+    float: left;
+    width: 0;
+    margin-top: -32767px;
+  }
+}
 .background-header {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
@@ -415,7 +445,7 @@ textarea {
 .contact-form-container {
   position: relative;
   display: block;
-  margin: 25px auto 0 auto;
+  margin: 25px auto 100px auto;
   width: 350px;
 }
 .contact-form-container ul,
@@ -430,6 +460,8 @@ textarea {
   outline: none !important;
   box-shadow: none !important;
   border-radius: 0px !important;
+  margin: 0;
+  padding: 0;
 }
 .input-header {
   margin-top: 15px;
@@ -464,5 +496,35 @@ textarea {
   input,
   textarea {
     width: 250px;
+  }
+}
+@media (min-width: 767px) {
+  html,
+  body {
+    height: 100%;
+  }
+  #wrap {
+    min-height: 100%;
+  }
+  #main {
+    overflow: auto;
+    padding-bottom: 190px;
+  }
+  /* must be same height as the footer */
+  .footer-container {
+    position: relative;
+    margin-top: -190px;
+    /* negative value of footer height */
+  
+    height: 190px;
+    clear: both;
+  }
+  /*Opera Fix*/
+  body:before {
+    content: "";
+    height: 100%;
+    float: left;
+    width: 0;
+    margin-top: -32767px;
   }
 }
