--- a/css/footer.less
+++ b/css/footer.less
@@ -82,10 +82,9 @@
         .height(20px, 12px);
         text-align: center;
         color: @footer-text-color;
-        .flag {
+        img {
             height: 30px;
             display: inline-block;
-            vertical-align: top;
             margin-left: 10px;
         }
     }
