--- a/css/index.css
+++ b/css/index.css
@@ -274,10 +274,9 @@ body {
   text-align: center;
   color: #000000;
 }
-.footer-bottom-container .footer-bottom .flag {
+.footer-bottom-container .footer-bottom img {
   height: 30px;
   display: inline-block;
-  vertical-align: top;
   margin-left: 10px;
 }
 @media (min-width: 768px) and (max-width: 1199px) {
